--- a/intex.html
+++ b/intex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Code Help</title>
+    <title>Team CodeHelp</title>
 </head>
 <body>
     <div class="wrapper">
@@ -22,6 +22,44 @@
                     <button>Start a Project</button>
                 </div>
             </nav>
+            <section>
+                <div class="first_container">
+                    <div class="first_container_left">
+                        <h2> Team CodeHelp</h2>
+                        <div class="desc">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit necessitatibus commodi voluptates natus veritatis aliquid recusandae voluptate consequatur a quos ab, fuga placeat ipsum quasi, ratione omnis amet numquam ipsa.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus adipisci iure expedita nulla hic debitis vero voluptatibus, ipsam nobis dolor cumque deleniti tempora quas explicabo accusantium incidunt officia optio excepturi?
+                                <br>
+                                <br>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus harum laboriosam sapiente eveniet expedita delectus obcaecati magni necessitatibus assumenda omnis quidem dicta vitae, perferendis saepe voluptatum beatae animi vel aspernatur!
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="first_container_right">
+                        <img src="1658909362559.jpeg" alt="" class="img1">
+                    </div>
+                </div>
+                <div class="second_container">
+                    <div class="second_container_left">
+                        <img src="WhatsApp Image 2023-12-16 at 17.15.22_49c00aa2.jpg" alt="" class="img2">
+                    </div>
+                    <div class="second_container_right">
+                        <h2>Founder, CEO</h2>
+                        <div class="desc">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora natus eligendi ipsam iure qui dolore corporis quod quidem eius aut facere, autem perferendis ut enim odio harum cumque velit a!
+                                Nobis, perspiciatis eos voluptas reiciendis aperiam autem accusantium modi quasi doloribus, laborum vero fuga expedita, nulla ad possimus voluptatem error totam deleniti. Atque error et animi dolore magnam aspernatur suscipit.
+                                <br>
+                                <br>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolorem, nesciunt non consequatur ad eum aliquam impedit soluta obcaecati reprehenderit in cum architecto numquam necessitatibus, ullam error, saepe neque nostrum?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
         </div>
     </div>
 </body>
