--- a/intex.html
+++ b/intex.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Team CodeHelp</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="container">
-            <nav>
+            <nav class="navbar">
                 <div class="logo1">
                     <img src="Codehelp logo.png" alt="" class="logo">
                 </div>
@@ -26,7 +27,7 @@
             <section>
                 <div class="first_container">
                     <div class="first_container_left">
-                        <h2> Team CodeHelp</h2>
+                        <h1> Team CodeHelp</h1>
                         <div class="desc">
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit necessitatibus commodi voluptates natus veritatis aliquid recusandae voluptate consequatur a quos ab, fuga placeat ipsum quasi, ratione omnis amet numquam ipsa.
@@ -47,7 +48,7 @@
                         <img src="WhatsApp Image 2023-12-16 at 17.15.22_49c00aa2.jpg" alt="" class="img2">
                     </div>
                     <div class="second_container_right">
-                        <h2>Founder, CEO</h2>
+                        <h1>Founder, CEO</h1>
                         <div class="desc">
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora natus eligendi ipsam iure qui dolore corporis quod quidem eius aut facere, autem perferendis ut enim odio harum cumque velit a!
