--- a/intex.html
+++ b/intex.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="container">
-            <nav class="navbar">
+            <div class="navbar">
                 <div class="logo1">
                     <img src="Codehelp logo.png" alt="" class="logo">
                 </div>
@@ -23,7 +23,7 @@
                 <div class="btn">
                     <button>Start a Project</button>
                 </div>
-            </nav>
+            </div>
             <section>
                 <div class="first_container">
                     <div class="first_container_left">
