--- a/intex.html
+++ b/intex.html
@@ -24,17 +24,17 @@
                     <button>Start a Project</button>
                 </div>
             </div>
-            <section>
+            <section class="section">
                 <div class="first_container">
                     <div class="first_container_left">
-                        <h1> Team CodeHelp</h1>
+                        <h1 class="h1tag"> Team CodeHelp</h1>
                         <div class="desc">
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit necessitatibus commodi voluptates natus veritatis aliquid recusandae voluptate consequatur a quos ab, fuga placeat ipsum quasi, ratione omnis amet numquam ipsa.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus adipisci iure expedita nulla hic debitis vero voluptatibus, ipsam nobis dolor cumque deleniti tempora quas explicabo accusantium incidunt officia optio excepturi?
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 <br>
                                 <br>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus harum laboriosam sapiente eveniet expedita delectus obcaecati magni necessitatibus assumenda omnis quidem dicta vitae, perferendis saepe voluptatum beatae animi vel aspernatur!
+                                Assumenda omnis quidem dicta vitae, perferendis saepe voluptatum beatae animi vel aspernatur!
 
                             </p>
                         </div>
