--- a/intex.html
+++ b/intex.html
@@ -24,7 +24,7 @@
                     <button>Start a Project</button>
                 </div>
             </div>
-            <section class="section">
+            <section class="">
                 <div class="first_container">
                     <div class="first_container_left">
                         <h1 class="h1tag"> Team CodeHelp</h1>
@@ -48,11 +48,11 @@
                         <img src="WhatsApp Image 2023-12-16 at 17.15.22_49c00aa2.jpg" alt="" class="img2">
                     </div>
                     <div class="second_container_right">
-                        <h1>Founder, CEO</h1>
+                        <h1 class="h2tag">Founder, CEO</h1>
                         <div class="desc">
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora natus eligendi ipsam iure qui dolore corporis quod quidem eius aut facere, autem perferendis ut enim odio harum cumque velit a!
-                                Nobis, perspiciatis eos voluptas reiciendis aperiam autem accusantium modi quasi doloribus, laborum vero fuga expedita, nulla ad possimus voluptatem error totam deleniti. Atque error et animi dolore magnam aspernatur suscipit.
+                                Nobis, perspiciatis eos voluptas reiciendis aperiam autem accusantium modi quasi doloribus, laborum vero fuga expedita, 
                                 <br>
                                 <br>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolorem, nesciunt non consequatur ad eum aliquam impedit soluta obcaecati reprehenderit in cum architecto numquam necessitatibus, ullam error, saepe neque nostrum?
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </section>
-            <footer>
+            <div class="footer">
                 <div class="logo2">
                     <img src="Codehelp logo.png" alt="" class="logo">
 
@@ -74,7 +74,7 @@
                     </span>
 
                 </div>
-            </footer>
+            </div>
         </div>
     </div>
 </body>
